# 20241204_python_intermediaire

./: README.md
corrections/: exercice01.py  exercice02.py
demos/demo-flet/: README.md  hello.py  main.py  pyproject.toml  task.py
demos/demo-sql/: data.sql  dql.sql
demos/demo-sql/python-sql/: basedao.py  main.py  models.py  singledao.py
demos/demo-sql/sql/: demo-rock.sql  dml.sql  dql.sql  tcl.sql
demos/demo-uv/: README.md  app.py  pyproject.toml
demos/demo-uv/app/: models.py
demos/demos-poo/: demo01_class.py  demo02_visibility_property.py  demo03_heritance.py  demo04_abstract.py  demo05_static_class_method.py  demo06_exception.py  demo07_magic_method.py  demo08_decorator.py
exercices/: exercice01_compte_bancaire.md  exercice02_watertank.md
